new picture and text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div class="info-block">
           <div class="inner">
-            <img src="/images/LEESnewweb-sq.jpg">
+            <img src="/images/logan-sq.jpg">
             <h3>Don L. Logan</h3>
             <div class="showme">
               <p>(302)&nbsp;325-3555&nbsp;x308</p>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="bio-info">
                   <div class="bio-extra">
-                    <img src="/images/LEESnewweb.jpg">
+                    <img src="/images/logan.jpg">
                     <h4>Contact Don</h4>
                     <p>(302)&nbsp;325-3555&nbsp;x308<br>dlogan@loganllc.com</p>
                     <a href="mailto:dlogan@loganllc.com"><i class="fa fa-envelope-o"></i></a>
@@ -169,7 +169,7 @@
 
         <div class="info-block">
           <div class="inner">
-            <img src="/images/LEESnewweb-sq.jpg">
+            <img src="/images/lees-sq.jpg">
             <h3>George T. Lees, III</h3>
             <div class="showme">
               <p>(302)&nbsp;325-3555&nbsp;x310</p>
@@ -182,22 +182,22 @@
                 </div>
                 <div class="bio-info">
                   <div class="bio-extra">
-                    <img src="/images/LEESnewweb.jpg">
+                    <img src="/images/lees.jpg">
                     <h4>Contact George</h4>
                     <p>(302)&nbsp;325-3555&nbsp;x310<br>glees@loganllc.com</p>
                     <a href="mailto:glees@loganllc.com"><i class="fa fa-envelope-o"></i></a>
                     <a href="https://www.linkedin.com/in/george-lees-15b4b7118" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                   <div class="bio-cv">
-                    <p>George T. Lees, III concentrates his practice in the areas of product liability, premises liability, insurance coverage, workers’ compensation and environmental, mass and toxic torts.</p>
-                    <p>George earned a B.S. degree from the University of Scranton, where he was on the Dean’s List. He earned a J.D. degree from the Widener University School of Law in 1997. He is admitted to practice in states of Delaware, Pennsylvania and New Jersey and the U.S. District Court for the Eastern District of Pennsylvania, the U.S. District Court of Delaware and the U.S. Court of Appeals for the Third Circuit.</p>
+                    <p>George T. Lees III joined the firm in 2015 after 18 years of practice as a trial lawyer representing the interests of clients and insurers in a broad range of matters in the Courts throughout Delaware, Pennsylvania and New Jersey.  He has assisted clients in defending and prosecuting construction defect claims, construction accident claims, insurance coverage issues and indemnification claims as well as payment disputes. His experience in litigating personal injury matters from post-accident investigation through trial and appeal expands the range of services the firm is able to provide its clients from defending motor vehicle citations to representing clients in all aspects of litigation arising out of motor vehicle and other similar accidents.</p>
                     <p>
                     <em>PRACTICE AREAS</em><br>
-                    Product Liability<br>
-                    Insurance Coverage<br>
-                    Casualty and Negligence<br>
-                    Workers’ Compensation<br>
-                    Environmental, Toxic and Mass Torts<br>
+                    Mechanics liens<br>
+                    Payment disputes<br>
+                    Construction defect<br>
+                    Insurance coverage<br>
+                    Personal Injury<br>
+                    Traffic matters<br>
                     </p>
                     <p>
                     <em>BAR ADMISSIONS</em><br>
