--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
         <div class="info-block">
           <div class="inner">
             <img src="/images/logan-sq.jpg">
-            <h3>Don L. Logan</h3>
+            <h3>Donald L. Logan</h3>
             <div class="showme">
               <p>(302)&nbsp;325-3555&nbsp;x308</p>
-              <a href="#" class="bio" data-reveal-id="one">Read Don's Bio</a>
+              <a href="#" class="bio" data-reveal-id="one">Read Donald's Bio</a>
               <a href="mailto:dlogan@loganllc.com"><i class="fa fa-envelope-o"></i></a>
               <a href="https://www.linkedin.com/in/don-logan-5532654" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="one" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
-                  <h3 id="modalTitle">Don&nbsp;L.&nbsp;Logan,&nbsp;Esquire</h3>
+                  <h3 id="modalTitle">Donald&nbsp;L.&nbsp;Logan,&nbsp;Esquire</h3>
                 </div>
                 <div class="bio-info">
                   <div class="bio-extra">
@@ -130,7 +130,7 @@
                     <a href="https://www.linkedin.com/in/victoria-petrone-a11b438" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                   <div class="bio-cv">
-                    <p>Over the past twelve years Vicky Petrone has developed a regional practice concentrated on construction law. Her clients include owners, developers, contractors, subcontractors, architects and engineers. Vicky advises clients on transactional and litigation needs including corporate formation, contract development, review and negotiation, construction defects, payment claims and mechanic’s liens, public bidding and prevailing wage law, surety claims, scheduling and delay claims, employee manuals and employment disputes, insurance coverage and claims and alternative dispute resolution. Her practice spans state and federal courts as well as private and AAA mediation and arbitration.</p>
+                    <p>Over the past twelve years Vicky Petrone has developed a regional practice concentrated on construction law, relying on her civil engineering degree and previous experience working as a project manager for a national construction company. Vicky's clients include owners, developers, contractors, subcontractors, architects and engineers. Vicky advises clients on transactional and litigation needs including corporate formation, contract development, review and negotiation, construction defects, payment claims and mechanic’s liens, public bidding and prevailing wage law, surety claims, scheduling and delay claims, employee manuals and employment disputes, insurance coverage and claims and alternative dispute resolution. Her practice spans state and federal courts as well as private and AAA mediation and arbitration.</p>
                     <p>
                     <em>BAR ADMISSIONS</em><br>
                     U.S. District Court for the District of Delaware<br>
@@ -259,7 +259,7 @@
     </section>
   
     <div class="footer-section">
-      <form action="http://formspree.io/vpetrone@loganllc.com" method="post">
+      <form action="http://formspree.io/?showModal=yes" method="post">
         <input type="hidden" name="_next" value="http://lp.netlify.com/?showModal=yes"/>
         <div id="contact-contain">
           <div class="contact-form">
@@ -284,12 +284,13 @@
       </form>
       <div id="contact-success" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <h2 id="modalTitle">Thank You For Contacting Logan & Petrone, LLC</h2>
-        <p class="lead">One of our legal professionals will be in touch promptly.</p>
+        <p class="lead">We will endeavor to respond promptly, however, note that neither contacting the firm nor submission of this form creates an attorney-client relationship and the firm may not ultimately agree to represent you.  Further, information transmitted through this website is not treated as confidential.</p>
         <p>The attorneys at Logan & Petrone, LLC provide corporate and litigation services to all parties involved in the construction process; owners, contractors, subcontractors, suppliers, architects, engineers and sureties. Our attorneys are admitted to practice in Delaware, Pennsylvania, Maryland and New Jersey.</p>
         <a class="close-reveal-modal" aria-label="Close">&#215;</a>
       </div>
       <div id="lp-info-contain">
         <div id="lp-info">
+          <p>Please do not send confidential or sensitive information through this form. Information transmitted through this website is not treated as confidential. Submitting this form or contacting the firm does not create an attorney-client relationship.</p>
           <img src="/images/lp-logo.png">
           <p>One Corporate Commons<br>100 Commons Boulevard, Suite 300<br>New Castle, DE 19720</p>
           <p>(302) 325-3555<br>FAX&nbsp;.&nbsp;(302) 325-3556</p>
