--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   
     <div class="footer-section">
       <form action="http://formspree.io/?showModal=yes" method="post">
-        <input type="hidden" name="_next" value="http://lp.netlify.com/?showModal=yes"/>
+        <input type="hidden" name="_next" value="https://lp.netlify.com/?showModal=yes"/>
         <div id="contact-contain">
           <div class="contact-form">
             <h3>Contact Us</h3>
