--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
     </section>
   
     <div class="footer-section">
-      <form action="http://formspree.io/?showModal=yes" method="post">
-        <input type="hidden" name="_next" value="https://lp.netlify.com/?showModal=yes"/>
+      <form action="https://formspree.io/?showModal=yes" method="post">
+        <input type="hidden" name="_next" value="http://lp.netlify.com/?showModal=yes"/>
         <div id="contact-contain">
           <div class="contact-form">
             <h3>Contact Us</h3>
