https for form spree

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     </section>
   
     <div class="footer-section">
-      <form action="https://formspree.io/?showModal=yes" method="post">
+      <form action="https://formspree.io/" method="post">
         <input type="hidden" name="_next" value="http://lp.netlify.com/?showModal=yes"/>
         <div id="contact-contain">
           <div class="contact-form">
