https for form spree

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   
     <div class="footer-section">
       <form action="https://formspree.io/vpetrone@loganllc.com" method="post">
-        <input type="hidden" name="_next" value="http://lp.netlify.com/?showModal=yes"/>
+        <input type="hidden" name="_next" value="http://www.loganllc.com/?showModal=yes"/>
         <div id="contact-contain">
           <div class="contact-form">
             <h3>Contact Us</h3>
