minor text and design changes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
       <div id="att-info">
         <div id="att-info-inner">
           <h3>Our Attorneys</h3>
-          <p>If you want a law firm that will be there for you from beginning to end, please contact one of the lawyers at our firm. We will be glad to discuss with you how we can help you with your difficult legal questions.</p>
         </div>
       </div>
       <div class="gray-block"></div>      
@@ -130,7 +129,7 @@
                     <a href="https://www.linkedin.com/in/victoria-petrone-a11b438" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                   <div class="bio-cv">
-                    <p>Over the past twelve years Vicky Petrone has developed a regional practice concentrated on construction law, relying on her civil engineering degree and previous experience working as a project manager for a national construction company. Vicky's clients include owners, developers, contractors, subcontractors, architects and engineers. Vicky advises clients on transactional and litigation needs including corporate formation, contract development, review and negotiation, construction defects, payment claims and mechanic’s liens, public bidding and prevailing wage law, surety claims, scheduling and delay claims, employee manuals and employment disputes, insurance coverage and claims and alternative dispute resolution. Her practice spans state and federal courts as well as private and AAA mediation and arbitration.</p>
+                    <p>Since 2003 Vicky Petrone has developed a regional practice concentrated on construction law, relying on her civil engineering degree and previous experience working as a project manager for a national construction company. Vicky's clients include owners, developers, contractors, subcontractors, architects and engineers. Vicky advises clients on transactional and litigation needs including corporate formation, contract development, review and negotiation, construction defects, payment claims and mechanic’s liens, public bidding and prevailing wage law, surety claims, scheduling and delay claims, employee manuals and employment disputes, insurance coverage and claims and alternative dispute resolution. Her practice spans state and federal courts as well as private and AAA mediation and arbitration.</p>
                     <p>
                     <em>BAR ADMISSIONS</em><br>
                     U.S. District Court for the District of Delaware<br>
